fix layout issues

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ h1{text-align:center;font-size:2.5em;}
     border-radius:10px;
     margin:0 auto;
     display:block;
+    margin-bottom: 10px;
   }
 
 .block:nth-child(1){
@@ -43,6 +44,7 @@ h1{text-align:center;font-size:2.5em;}
   width:100px;
   min-width: 100px;
   margin:0 auto;
+  margin-bottom:10px;
   
   
 }
